--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,11 +2,14 @@
 
 Formerly known as 'gitlab-git-http-server'.
 
-v0.7.2
+v0.7.2 DO NOT USE
 
 Integrate with GOPATH during development (remove relative imports
 etc.). Buffer Git HTTP responses so that we may return an error if the
 local command fails early.
+
+Update: the 'buffer Git HTTP responses' change in 0.7.2 is BAD, it
+breaks shallow Git clone. Don't use 0.7.2!
 
 v0.7.1
 
