--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@
 
 Formerly known as 'gitlab-git-http-server'.
 
+v0.7.5
+
+Add the capability to inject `git diff` output as HTTP response bodies
+(@zj).
+
 v0.7.4
 
 Pass a timestamp when forwarding requests to Rails. Hopefully this
