--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,10 @@
 
 Formerly known as 'gitlab-git-http-server'.
 
+v0.7.6
+
+Add the capability to inject `git format-patch` output.
+
 v0.7.5
 
 Add the capability to inject `git diff` output as HTTP response bodies
